--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Python CI
 
 on:
   push:
@@ -8,13 +8,19 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
       run: |
-        echo Add other commands here
-        echo This is another command
+        python -m pip install --upgrade pip
+        # Fügen Sie hier Befehle zum Installieren weiterer Abhängigkeiten hinzu
+    - name: Run hello_world.py
+      run: |
+        python hello_word.py
