--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Python CI/CD Pipeline
 
 on:
   push:
@@ -8,19 +8,43 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Fügen Sie hier Befehle zum Installieren weiterer Abhängigkeiten hinzu
-    - name: Run hello_world.py
+        # Fügen Sie hier weitere Befehle zum Installieren von Abhängigkeiten hinzu, z.B. pip install -r requirements.txt
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: Install dependencies
       run: |
-        python hello_word.py
+        python -m pip install --upgrade pip
+        # Installieren Sie hier Ihre Testabhängigkeiten
+    - name: Run tests
+      run: |
+        # Führen Sie hier Ihre Testkommandos aus, z.B. python -m unittest discover
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+    - uses: actions/checkout@v2
+    - name: Deploy
+      run: |
+        # Fügen Sie hier Ihre Deploy-Befehle hinzu. Das kann scp, ssh, ein Cloud-Provider-CLI-Befehl oder etwas anderes sein.
